--- a/main_model.ipynb
+++ b/main_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "8888c109",
    "metadata": {},
    "outputs": [],
@@ -226,12 +226,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "area_type\n",
       "Super built-up  Area    8790\n",
       "Built-up  Area          2418\n",
       "Plot  Area              2025\n",
       "Carpet  Area              87\n",
-      "Name: area_type, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "********************\n",
+      "availability\n",
       "Ready To Move    10581\n",
       "18-Dec             307\n",
       "18-May             295\n",
@@ -243,8 +245,9 @@
       "16-Nov               1\n",
       "16-Jan               1\n",
       "14-Jul               1\n",
-      "Name: availability, Length: 81, dtype: int64\n",
+      "Name: count, Length: 81, dtype: int64\n",
       "********************\n",
+      "location\n",
       "Whitefield                        540\n",
       "Sarjapur  Road                    399\n",
       "Electronic City                   302\n",
@@ -256,8 +259,9 @@
       "BEML Layout 5th stage               1\n",
       "singapura paradise                  1\n",
       "Abshot Layout                       1\n",
-      "Name: location, Length: 1305, dtype: int64\n",
+      "Name: count, Length: 1305, dtype: int64\n",
       "********************\n",
+      "size\n",
       "2 BHK         5199\n",
       "3 BHK         4310\n",
       "4 Bedroom      826\n",
@@ -289,8 +293,9 @@
       "16 BHK           1\n",
       "19 BHK           1\n",
       "18 Bedroom       1\n",
-      "Name: size, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "********************\n",
+      "society\n",
       "GrrvaGr    80\n",
       "PrarePa    76\n",
       "Sryalan    59\n",
@@ -302,8 +307,9 @@
       "Jauraht     1\n",
       "Brity U     1\n",
       "RSntsAp     1\n",
-      "Name: society, Length: 2688, dtype: int64\n",
+      "Name: count, Length: 2688, dtype: int64\n",
       "********************\n",
+      "total_sqft\n",
       "1200    843\n",
       "1100    221\n",
       "1500    205\n",
@@ -315,8 +321,9 @@
       "1437      1\n",
       "2155      1\n",
       "4689      1\n",
-      "Name: total_sqft, Length: 2117, dtype: int64\n",
+      "Name: count, Length: 2117, dtype: int64\n",
       "********************\n",
+      "bath\n",
       "2.0     6908\n",
       "3.0     3286\n",
       "4.0     1226\n",
@@ -336,14 +343,16 @@
       "15.0       1\n",
       "14.0       1\n",
       "18.0       1\n",
-      "Name: bath, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "********************\n",
+      "balcony\n",
       "2.0    5113\n",
       "1.0    4897\n",
       "3.0    1672\n",
       "0.0    1029\n",
-      "Name: balcony, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "********************\n",
+      "price\n",
       "75.00     310\n",
       "65.00     302\n",
       "55.00     275\n",
@@ -355,7 +364,7 @@
       "80.64       1\n",
       "32.73       1\n",
       "488.00      1\n",
-      "Name: price, Length: 1994, dtype: int64\n",
+      "Name: count, Length: 1994, dtype: int64\n",
       "********************\n"
      ]
     }
@@ -1014,6 +1023,7 @@
     {
      "data": {
       "text/plain": [
+       "location\n",
        "Whitefield                        540\n",
        "Sarjapur  Road                    399\n",
        "Electronic City                   302\n",
@@ -1025,7 +1035,7 @@
        "singapura paradise                  1\n",
        "Uvce Layout                         1\n",
        "Abshot Layout                       1\n",
-       "Name: location, Length: 1306, dtype: int64"
+       "Name: count, Length: 1306, dtype: int64"
       ]
      },
      "execution_count": 23,
@@ -1046,6 +1056,7 @@
     {
      "data": {
       "text/plain": [
+       "location\n",
        "Whitefield                            541\n",
        "Sarjapur  Road                        399\n",
        "Electronic City                       304\n",
@@ -1057,7 +1068,7 @@
        "Vijayabank bank layout                  1\n",
        "near Ramanashree California resort      1\n",
        "Abshot Layout                           1\n",
-       "Name: location, Length: 1295, dtype: int64"
+       "Name: count, Length: 1295, dtype: int64"
       ]
      },
      "execution_count": 24,
@@ -1112,6 +1123,7 @@
     {
      "data": {
       "text/plain": [
+       "location\n",
        "other                 2886\n",
        "Whitefield             541\n",
        "Sarjapur  Road         399\n",
@@ -1123,7 +1135,7 @@
        "LB Shastri Nagar        11\n",
        "Pattandur Agrahara      11\n",
        "Narayanapura            11\n",
-       "Name: location, Length: 242, dtype: int64"
+       "Name: count, Length: 242, dtype: int64"
       ]
      },
      "execution_count": 27,
@@ -1879,14 +1891,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/nandy/anaconda3/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:828: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "/Users/suhasms/anaconda3/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:975: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
       "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;columntransformer&#x27;,\n",
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;columntransformer&#x27;,\n",
        "                 ColumnTransformer(remainder=&#x27;passthrough&#x27;,\n",
        "                                   transformers=[(&#x27;onehotencoder&#x27;,\n",
        "                                                  OneHotEncoder(sparse=False),\n",
@@ -1918,7 +1930,7 @@
     }
    ],
    "source": [
-    " pipe.fit(x_train,y_train)"
+    "pipe.fit(x_train,y_train)"
    ]
   },
   {
@@ -1971,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "id": "7b516a09",
    "metadata": {},
    "outputs": [],
@@ -1984,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "id": "0546f0f2",
    "metadata": {},
    "outputs": [
@@ -2017,7 +2029,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.9 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -2032,6 +2044,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "335925d4ab2f2a28953913d71a2c3c34d47fac16eb58ba856daab4650d5a2ed3"
+   }
   }
  },
  "nbformat": 4,
